--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,13 @@
   padding: 0;
 }
 
+@font-face {
+  * {
+    font-family: 'Myriad Pro';
+    src: url("font/Myriad-Pro.ttf");
+  }
+}
+
 body {
   min-height: 100vh;
   background-color: #e5e5e5;
@@ -10,12 +17,13 @@ body {
 
 .wrapper {
   max-width: 1200px;
-  margin: 40px auto;
+  margin: 0 auto;
   background-color: #ffffff;
+  margin-top: -1px;
 }
 
 .Navigation {
-  width: 90%;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 20px 0;
   display: -webkit-box;
@@ -28,6 +36,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   border-bottom: 1px solid #e5e5e5;
+  background-color: #ffffff;
 }
 
 .Navigation .nav {
@@ -110,6 +119,89 @@ body {
   width: 15px;
   height: 15px;
   left: -20px;
+}
+
+.headerMain {
+  padding-top: 150px;
+  padding-bottom: 50px;
+}
+
+.headerMain h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 72px;
+  font-family: "Myriad Pro";
+}
+
+.headerMain h3 {
+  font-size: 24px;
+  font-family: "Georgia";
+  text-align: center;
+  font-weight: normal;
+  color: #959595;
+}
+
+.headerMain a {
+  margin: 70px auto;
+  width: 30%;
+  margin-bottom: 0;
+  display: block;
+  text-align: center;
+  padding: 25px 45px;
+  border: 1px solid #959595;
+  color: #959595;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.advertisingLink {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 96%;
+  margin: 0 auto;
+}
+
+.advertisingLink .advertisingLinkDiv {
+  width: 25%;
+  height: 885px;
+}
+
+.advertisingLink .advertisingLinkDiv a {
+  font-size: 24px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+}
+
+.advertisingLink .advertisingLinkDiv .jeansJacket {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 70%;
+  background-image: url("img/advertising/1.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.advertisingLink .advertisingLinkDiv .jeansJacket div {
+  margin: auto auto;
+}
+
+.advertisingLink .advertisingLinkDiv .accessories {
+  display: block;
+  height: 30%;
+  background-image: url("img/advertising/5.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .goodsCard {
