--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,10 @@
 *{
     margin: 0;
     padding: 0;
+    @font-face {
+        font-family: 'Myriad Pro';
+        src: url('font/Myriad-Pro.ttf');
+    }
 
 }
 body{
@@ -9,17 +13,19 @@ body{
 }
 .wrapper{
     max-width: 1200px;
-    margin: 40px auto;
+    margin: 0 auto;
     background-color: #ffffff;
+    margin-top: -1px;
 }
 .Navigation{
-    width: 90%;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 20px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid #e5e5e5;
+    background-color: #ffffff;
     .nav{
         display: flex;
         justify-content: space-between;
@@ -86,6 +92,80 @@ body{
             }
 
             
+        }
+    }
+}
+.headerMain{
+    padding-top: 150px;
+    padding-bottom: 50px;
+    h1{
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 72px;
+        font-family: "Myriad Pro";
+    }
+    h3{
+        font-size: 24px;
+        font-family: "Georgia";
+        text-align: center;
+        font-weight: normal;
+        color: #959595
+    }
+    a{
+        margin: 70px auto;
+        width: 30%;
+        margin-bottom: 0;
+        display: block;
+        text-align: center;
+        padding: 25px 45px;
+        border: 1px solid #959595;
+        color: #959595;
+        text-transform: uppercase;
+        text-decoration: none;
+
+    }
+}
+.advertisingLink{
+    display: flex;
+    
+    width: 96%;
+    margin: 0 auto;
+    .advertisingLinkDiv{
+        width: 25%;
+        height: 885px;
+        // background-image: url('img/advertising/1.jpg');
+        // background-size: 100%;
+        // background-repeat: no-repeat;
+        // background-position: center;
+        a{
+            font-size: 24px;
+            font-family: "Myriad Pro";
+            color: rgb(255, 255, 255);
+            text-transform: uppercase;
+            text-decoration: none;
+            text-align: center;
+            
+        }
+        .jeansJacket{
+            display: flex;
+            flex-direction: column;
+            height: 70%;
+            background-image: url('img/advertising/1.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            div{
+                margin: auto auto;
+            } 
+        }
+        .accessories{
+            display: block;
+            height: 30%;
+            background-image: url('img/advertising/5.jpg');
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+
         }
     }
 }
