--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -172,6 +172,7 @@ body{
 .goodsCard{
     width: 90%;
     margin: 0 auto;
+    margin-top: -31px;
     .tag{
         margin-top: 30px;
         margin-bottom: 75px;
