--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -18,7 +18,7 @@ body{
     margin-top: -1px;
 }
 .Navigation{
-    max-width: 1200px;
+    width: 96%;
     margin: 0 auto;
     padding: 20px 0;
     display: flex;
@@ -297,7 +297,7 @@ body{
                 position: absolute;
                 width: 100%;
                 height: 100%;
-                background-color: #6060609c;
+                background-color: #0000005c;
                 top: 0;
                 left: 0;
             }
@@ -352,6 +352,53 @@ body{
             margin: auto auto;
         } 
     }
+}
+.formEmail{
+    width: 96%;
+    margin: 245px auto;
+    h2{
+        font-size: 36px;
+        font-family: "Myriad Pro";
+        color: rgb(48, 48, 48);
+        text-transform: uppercase;
+        text-align: center;
+    }
+    h3{
+        font-size: 18px;
+        font-family: "Georgia";
+        color: rgb(96, 96, 96);
+        font-style: italic;
+        text-align: center;
+    }
+    form{
+        width: 55%;
+        margin: 20px auto;
+        input{
+            width: 60%;
+            padding: 2%;
+        }
+        button{
+            width: 30%;
+            padding: 2%;
+            background-color: #f68236;
+            font-size: 14px;
+            font-family: "Myriad Pro";
+            color: rgb(255, 255, 255);
+        }
+        p{
+            font-size: 14px;
+            font-family: "Myriad Pro";
+            text-align: center;
+            margin-top: 10px;
+            
+        }
+        .red{
+            color: rgb(237, 28, 36);
+        }
+        .green{
+            color: green;
+        }
+    } 
 }
 .goodsCard{
     width: 90%;
