--- a/src/css/style.css
+++ b/src/css/style.css
@@ -506,6 +506,98 @@ body {
   color: green;
 }
 
+footer {
+  width: 96%;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer h2 {
+  font-size: 14px;
+  font-family: "Myriad Pro";
+  color: #303030;
+  text-transform: uppercase;
+  margin-bottom: 30px;
+}
+
+footer a {
+  font-size: 12px;
+  font-family: "Myriad Pro";
+  color: #303030;
+  text-decoration: none;
+  margin-bottom: 15px;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+footer .catolog {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 33%;
+  border-right: 2px solid #eaeaea;
+}
+
+footer .about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 33%;
+  border-right: 2px solid #eaeaea;
+}
+
+footer .social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 20%;
+}
+
+footer .social p {
+  font-size: 12px;
+  font-family: "Myriad Pro";
+  color: #303030;
+  margin-bottom: 15px;
+}
+
+footer .social .link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 65%;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+footer .social .link a {
+  display: block;
+  padding: 5px;
+  border: 1px solid #606060;
+  text-align: center;
+  width: 16px;
+  height: 16px;
+}
+
 .goodsCard {
   width: 90%;
   margin: 0 auto;
