--- a/src/css/style.css
+++ b/src/css/style.css
@@ -604,6 +604,26 @@ footer .social .link a {
   margin-top: -31px;
 }
 
+.goodsCard .breadCrumb {
+  margin: 50px auto;
+  width: 100%;
+}
+
+.goodsCard .breadCrumb a {
+  font-size: 12px;
+  font-family: "Myriad Pro";
+  color: #606060;
+  text-transform: uppercase;
+  text-decoration: none;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+  margin: 0 10px;
+}
+
+.goodsCard .breadCrumb a:hover {
+  text-decoration: underline;
+}
+
 .goodsCard .tag {
   margin-top: 30px;
   margin-bottom: 75px;
