--- a/src/css/style.css
+++ b/src/css/style.css
@@ -704,6 +704,104 @@ footer .social .link a {
   margin: 20px 0;
 }
 
+.product .breadCrumb {
+  margin: 50px auto;
+  width: 100%;
+}
+
+.product .breadCrumb a {
+  font-size: 12px;
+  font-family: "Myriad Pro";
+  color: #606060;
+  text-transform: uppercase;
+  text-decoration: none;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
+  margin: 0 10px;
+}
+
+.product .breadCrumb a:hover {
+  text-decoration: underline;
+}
+
+.product .itemCard {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  font-family: "Myriad Pro";
+  text-transform: uppercase;
+  margin-bottom: 100px;
+}
+
+.product .itemCard img {
+  display: block;
+  margin: 0 auto;
+}
+
+.product .itemCard h1 {
+  margin-top: 20px;
+  font-size: 36px;
+  color: #303030;
+}
+
+.product .itemCard p {
+  text-align: center;
+  font-family: "Myriad Pro";
+  font-size: 12px;
+  text-transform: uppercase;
+  color: #d7d7d7;
+}
+
+.product .itemCard h4 {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #bfbfbf;
+}
+
+.product .itemCard h3 {
+  margin-top: 20px;
+  font-size: 14px;
+  color: #606060;
+  font-weight: normal;
+  text-transform: none;
+}
+
+.product .itemCard .size {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0 auto;
+}
+
+.product .itemCard .size div {
+  padding: 5px;
+  margin-left: 10px;
+  border: 1px solid #959595;
+  color: #959595;
+}
+
+.product .itemCard a {
+  display: block;
+  margin: 0 auto;
+  margin-top: 20px;
+  background-color: #f68236;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: "Myriad Pro";
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  padding: 20px 30px;
+}
+
 .paginator {
   width: 12%;
   margin: 30px auto;
