--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -544,6 +544,88 @@ footer{
         }
     }
 }
+.product{
+    .breadCrumb{
+        margin: 50px auto;
+        width: 100%;
+        
+        a{
+            font-size: 12px;
+            font-family: "Myriad Pro";
+            color: rgb(96, 96, 96);
+            text-transform: uppercase;
+            text-decoration: none;
+            transition: all 300ms;
+            margin: 0 10px;
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+    }
+    .itemCard{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        font-family: "Myriad Pro";
+        text-transform: uppercase;
+        margin-bottom: 100px;
+        img{
+            display: block;
+            margin: 0 auto;
+        }
+        h1{
+            margin-top: 20px;
+            font-size: 36px;
+            color: #303030;
+
+        }
+        p{
+            text-align: center;
+            font-family: "Myriad Pro";
+            font-size: 12px;
+            text-transform: uppercase;
+            color: #d7d7d7;
+        }
+        h4{
+            margin-top: 20px;
+            font-size: 14px;
+            color: #bfbfbf;
+        }
+        h3{
+            margin-top: 20px;
+            font-size: 14px;
+            color: #606060;
+            font-weight: normal;
+            text-transform: none;
+        }
+        .size{
+            display: flex;
+            margin: 0 auto;
+            div{
+                padding: 5px;
+                margin-left: 10px;
+                border: 1px solid #959595;
+                color: #959595;
+            }
+        }
+        a{
+            display: block;
+            margin: 0 auto;
+            margin-top: 20px;
+            background-color: #f68236;
+            text-decoration: none;
+            font-size: 14px;
+            font-family: "Myriad Pro";
+            color: rgb(255, 255, 255);
+            text-transform: uppercase;
+            text-align: center;
+            padding: 20px 30px; 
+        }
+
+    }
+}
+
 .paginator{
     width: 12%;
     margin: 30px auto;
