--- a/src/css/style.css
+++ b/src/css/style.css
@@ -802,6 +802,99 @@ footer .social .link a {
   padding: 20px 30px;
 }
 
+.basketUser {
+  margin: 100px auto;
+}
+
+.basketUser h1 {
+  font-size: 36px;
+  font-family: "Myriad Pro";
+  color: #303030;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.basketUser h2 {
+  margin-top: 30px;
+  font-size: 20px;
+  font-family: "Myriad Pro";
+  color: #6e6e6e;
+  text-align: center;
+}
+
+.basketUser .table {
+  width: 96%;
+  margin: 0 auto;
+}
+
+.basketUser .table .tr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid #e5e5e5;
+  padding: 20px 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.basketUser .table .tr .img {
+  width: 10%;
+}
+
+.basketUser .table .tr .name {
+  width: 40%;
+}
+
+.basketUser .table .tr .size {
+  width: 10%;
+}
+
+.basketUser .table .tr .count {
+  width: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.basketUser .table .tr .count .countVal {
+  font-size: 20px;
+}
+
+.basketUser .table .tr .count .fun {
+  margin-left: 20px;
+}
+
+.basketUser .table .tr .count .fun .plus {
+  font-size: 12px;
+  color: white;
+  background-color: #303030;
+  padding: 5px 7px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.basketUser .table .tr .count .fun .minus {
+  font-size: 12px;
+  color: white;
+  background-color: #303030;
+  padding: 5px 7px;
+  cursor: pointer;
+}
+
+.basketUser .table .tr .price {
+  width: 20%;
+}
+
+.basketUser .table .tr .delet {
+  width: 5%;
+  text-align: center;
+  cursor: pointer;
+}
+
 .paginator {
   width: 12%;
   margin: 30px auto;
