add item to cart

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -609,7 +609,7 @@ footer{
                 color: #959595;
             }
         }
-        a{
+        button{
             display: block;
             margin: 0 auto;
             margin-top: 20px;
