--- a/src/css/style.css
+++ b/src/css/style.css
@@ -788,7 +788,7 @@ footer .social .link a {
   color: #959595;
 }
 
-.product .itemCard a {
+.product .itemCard button {
   display: block;
   margin: 0 auto;
   margin-top: 20px;
